--- a/Calculator/calculator.css
+++ b/Calculator/calculator.css
@@ -3,22 +3,13 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-button {
-  font-size: 12px;
-  background-color: #cce5ff;
-  font-weight: 700;
-  color: #163b5f;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  height: 30px;
+h1 {
+  color: aliceblue;
+  text-align: center;
+  text-decoration: underline;
 }
 
-p {
-  margin: 0px;
-}
-
-.calculator {
+.container {
   width: 220px;
   margin: 0 auto;
   padding: 10px 10px 20px 10px;
@@ -39,15 +30,18 @@ p {
   background-color: #cce5ff;
 }
 
-#input {
+p {
   width: 100%;
+  margin: 0px;
+}
+
+#input {
   font-size: 16px;
   text-align: left;
   color: #4c89c6;
 }
 
 #output {
-  width: 100%;
   font-size: 26px;
   font-weight: bold;
   text-align: right;
@@ -58,6 +52,17 @@ p {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 5px;
+}
+
+button {
+  font-size: 12px;
+  background-color: #cce5ff;
+  font-weight: 700;
+  color: #163b5f;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  height: 30px;
 }
 
 .dark {
